Finished adding content.  Adjusted styling, and fixed some non-collapsing accordion cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
     border-color: coral;
     border-width: 2px;
     margin: 20px 20px;
+    text-align: center;
 }
 
 #feedBackField {
@@ -31,19 +32,21 @@ body {
     border-color: coral;
     border-width: 2px;
     margin: 20px 20px;
+    text-align: center;
 }
 
 .feildStyle {
+    text-align: center;
     width: 95%;
     border-style: solid;
     border-width: 1px;
     border-color: green;
+    border-radius: 3px;
     background-color: rgb(65, 67, 68);
     margin: 5%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2em;
     color: white;
-    text-align: center;
 }
 
 #pic {
@@ -76,10 +79,12 @@ body {
     color: coral;
 }
 
-.accordion {
+.cardHeader {
     text-align: center;
 }
 
-.accordion.width {
-    display: flex;
+.accordion{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
